crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__assigns_ids_to_mustaches_in_css.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.declared_vars().css_mustaches()
---
{
    NAME_REF@0..5
      IDENT@0..5 "color"
    : 0,
}
