crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__bindings_are_put_into_declared_vars.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.declared_vars()
---
DeclaredVariables {
    vars: {
        "x": 1,
    },
    arrow_exprs: {},
    bindings: {
        "x": 0,
    },
    scopes: {},
    css_mustaches: {},
    current_id: 2,
    css_current: 0,
}
