crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__can_get_all_declared_items.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.all_declared()
---
[
    VAR_DECL@0..10
      IDENT@0..3 "let"
      WHITESPACE@3..4 " "
      DECLARATOR@4..9
        SINGLE_PATTERN@4..5
          NAME@4..5
            IDENT@4..5 "x"
        WHITESPACE@5..6 " "
        EQ@6..7 "="
        WHITESPACE@7..8 " "
        LITERAL@8..9
          NUMBER@8..9 "3"
      SEMICOLON@9..10 ";"
    ,
    FN_DECL@11..41
      FUNCTION_KW@11..19 "function"
      WHITESPACE@19..20 " "
      NAME@20..24
        IDENT@20..24 "func"
      PARAMETER_LIST@24..26
        L_PAREN@24..25 "("
        R_PAREN@25..26 ")"
      WHITESPACE@26..27 " "
      BLOCK_STMT@27..41
        L_CURLY@27..28 "{"
        WHITESPACE@28..29 " "
        RETURN_STMT@29..39
          RETURN_KW@29..35 "return"
          WHITESPACE@35..36 " "
          LITERAL@36..38
            NUMBER@36..38 "33"
          SEMICOLON@38..39 ";"
        WHITESPACE@39..40 " "
        R_CURLY@40..41 "}"
    ,
    VAR_DECL@43..61
      IDENT@43..46 "let"
      WHITESPACE@46..47 " "
      DECLARATOR@47..48
        SINGLE_PATTERN@47..48
          NAME@47..48
            IDENT@47..48 "z"
      COMMA@48..49 ","
      WHITESPACE@49..50 " "
      DECLARATOR@50..56
        SINGLE_PATTERN@50..51
          NAME@50..51
            IDENT@50..51 "y"
        WHITESPACE@51..52 " "
        EQ@52..53 "="
        WHITESPACE@53..54 " "
        LITERAL@54..56
          NUMBER@54..56 "44"
      COMMA@56..57 ","
      WHITESPACE@57..58 " "
      ERROR@58..60
        NUMBER@58..60 "55"
      SEMICOLON@60..61 ";"
    ,
]
