crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__can_get_all_declared_items_with_proper_substitution.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.toplevel_nodes()
---
[
    ToplevelNodeData {
        node: VAR_DECL@1..11
          IDENT@1..4 "let"
          WHITESPACE@4..5 " "
          DECLARATOR@5..10
            SINGLE_PATTERN@5..6
              NAME@5..6
                IDENT@5..6 "x"
            WHITESPACE@6..7 " "
            EQ@7..8 "="
            WHITESPACE@8..9 " "
            LITERAL@9..10
              NUMBER@9..10 "3"
          SEMICOLON@10..11 ";"
        ,
        substitute_assign_refs: true,
    },
    ToplevelNodeData {
        node: FN_DECL@12..39
          FUNCTION_KW@12..20 "function"
          WHITESPACE@20..21 " "
          NAME@21..25
            IDENT@21..25 "func"
          PARAMETER_LIST@25..27
            L_PAREN@25..26 "("
            R_PAREN@26..27 ")"
          WHITESPACE@27..28 " "
          BLOCK_STMT@28..39
            L_CURLY@28..29 "{"
            WHITESPACE@29..30 " "
            EXPR_STMT@30..37
              ASSIGN_EXPR@30..36
                NAME_REF@30..31
                  IDENT@30..31 "x"
                WHITESPACE@31..32 " "
                EQ@32..33 "="
                WHITESPACE@33..34 " "
                LITERAL@34..36
                  NUMBER@34..36 "44"
              SEMICOLON@36..37 ";"
            WHITESPACE@37..38 " "
            R_CURLY@38..39 "}"
        ,
        substitute_assign_refs: true,
    },
    ToplevelNodeData {
        node: EXPR_STMT@40..49
          NAME_REF@40..48
            IDENT@40..48 "variable"
          SEMICOLON@48..49 ";"
        ,
        substitute_assign_refs: false,
    },
]
