crates/decorous-frontend/src/component/snapshots/decorous_frontend__component__tests__can_get_exports_from_script.snap
---
source: crates/decorous-frontend/src/component/mod.rs
expression: component.exports()
---
[
    "x",
    "l",
]
